--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </ul>
 
     <p class="copyright">
-      &copy; Copyright by
+      &copy; Project by
       <a class="linkedin-link" target="_blank" href="https://www.linkedin.com/in/vitor-rodrigues06/">V.Rodrigues</a>.
     </p>
   </div>
